CSS Test box, grid, mediaquery

--- a/practice.html
+++ b/practice.html
@@ -12,6 +12,7 @@
 
       gtag('config', 'UA-160843654-1');
     </script>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -23,14 +24,12 @@
       <li><a href="practice.html">Practice</a></li>
     </ol>
 
-    <h2>Add video</h2>
     <p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <iframe style="width: 100vw; height: 100vh;" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
 
-    <h2>Comment function</h2>
     <p>
       <div id="disqus_thread"></div>
       <script>
@@ -53,10 +52,6 @@
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
 
-    <h2>Web page analyzer</h2>
-    <p>
-    </p>
-
         <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -70,6 +65,5 @@
       })();
     </script>
         <!--End of Tawk.to Script-->
-
   </body>
 </html>
