--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
   <head>
     <title>WEB1 - welcome</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="e.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+        <li><a href="practice.html">Practice</a></li>
+      </ol>
+      <div id="article">
+        <h2>WEB</h2>
+        <p> Welcome to the first page </p>
+      </div>
+    </div>
 
-    <h2>WEB</h2>
-    <p> Welcome to the first page </p>
+
+
+
+
 
   </body>
 </html>
