--- a/JavaScript/ex3.html
+++ b/JavaScript/ex3.html
@@ -1,8 +1,27 @@
+<!-- JavaScript : selecting a tag to control-->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
+<head>
+  <title>WEB2 - JavaScript</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  
+  <!-- selecting a tag by css selector, element style -->
+  <input type="button" value="night" onClick="
+    document.querySelector('body').style.backgroundColor= 'black';
+    document.querySelector('body').style.color= 'white';
+   ">
+  <input type="button" value="day" OnClick="
+    document.querySelector('body').style.backgroundColor= 'white';
+    document.querySelector('body').style.color= 'black';
+  ">
+
   <h2 style="color:orchid; background-color:thistle">JavaScript</h2>
   <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero illum laudantium non, repellat architecto quos magnam nisi est qui recusandae temporibus ratione. Beatae consequuntur earum optio, repellendus magnam ab inventore.</p>
   </div>
