--- a/JavaScript/ex3.html
+++ b/JavaScript/ex3.html
@@ -21,6 +21,7 @@
     document.querySelector('body').style.backgroundColor= 'white';
     document.querySelector('body').style.color= 'black';
   ">
+
   <br>
   <br>
 
@@ -43,6 +44,22 @@
   <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero illum laudantium non, repellat architecto quos magnam nisi est qui recusandae temporibus ratione. Beatae consequuntur earum optio, repellendus magnam ab inventore.</p>
   </div>
   </div>
+
+  <!-- refectoring - removing duplicates
+  use "this" instead of "id"
+  this indicates the tag your line belongs-->
+  <input type="button" value="night" onclick="
+      var target = document.querySelector('body');
+      if(this.value === 'night'){
+          target.style.backgroundColor= 'black';
+          target.style.color = 'white';
+          this.value = 'day';
+      } else {
+        target.style.backgroundColor= 'white';
+        target.style.color= 'black';
+        this.value = 'night';
+      }         
+    ">
 
 
 </body>
