--- a/JavaScript/ex5.html
+++ b/JavaScript/ex5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <title>WEB2 - JavaScript</title>
 </head>
 
 <body>
