--- a/JavaScript/ex3.html
+++ b/JavaScript/ex3.html
@@ -7,6 +7,38 @@
   <title>WEB2 - JavaScript</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+
+  <script> // using parameter-self- and function
+    function nightDayHandler(self) {
+      var target = document.querySelector('body');
+      if (self.value === 'night') {
+        target.style.backgroundColor = 'black';
+        target.style.color = 'white';
+        self.value = 'day';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while (i < alist.length) {
+          alist[i].style.color = 'powderblue';
+          i = i + 1;
+        }
+
+
+      } else {
+        target.style.backgroundColor = 'white';
+        target.style.color = 'black';
+        self.value = 'night';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while (i < alist.length) {
+          alist[i].style.color = 'blue';
+          i = i + 1;
+        }
+
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -110,6 +142,14 @@
         }         
       ">
 
+  <br>
+  <br>
+
+  <h3> refactoring - self and function </h3>
+  <!-- parameter_self argument_this and function -->
+  <input type="button" value="night" onclick="
+          nightDayHandler(this);         
+        ">
 
 
 </body>
