use jQuery with CDN

--- a/JavaScript/ex11a.html
+++ b/JavaScript/ex11a.html
@@ -4,9 +4,8 @@
 <head>
     <title>WEB2 - JavaScript</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-
-    <script src="ex11colors.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="ex11colors.js"></script>
 </head>
 
 <body>
@@ -16,7 +15,7 @@
                     ">
 
     <h2>Page1</h2>
-        <ol>
+    <ol>
         <li><a href="ex11a.html">Page1</a></li>
         <li><a href="ex11b.html">Page2</a></li>
     </ol>
