--- a/JavaScript/ex11b.html
+++ b/JavaScript/ex11b.html
@@ -4,8 +4,7 @@
 <head>
     <title>WEB2 - JavaScript</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="ex11colors.js"></script>
 </head>
 
